# ottawa-public-health-agent

./: .dockerignore  .env.sample  Dockerfile  PR_DESCRIPTION.md  README.md  Sandboxfile  cloudbuild.yaml  last-retrieval-outbreaks.html  main.py  main_async.py  mcp_server.py  my_agent_data.db  my_agent_data_dump.sql  pyproject.toml  resume_cli.py  verify_persistence.py
docs/: design-sketch.md
ottawa_public_health_agent/: agent.py  services.py  services.yaml
tests/: test_compaction.py
tools/: ottawa_health_scraper.py
