[project]
name = "leo-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "e2b-code-interpreter>=2.3.0",
    "google-adk>=1.19.0",
    "html5lib>=1.1",
    "mcp>=1.22.0",
    "microsandbox>=0.1.8",
    "msal>=1.34.0",
    "patchright>=1.56.0",
    "pbipy>=2.13.0",
    "playwright>=1.56.0",
    "python-dotenv>=1.2.1",
]
